--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,30 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+//        极光推送配置
+        manifestPlaceholders = [
+                JPUSH_PKGNAME : applicationId,
+                JPUSH_APPKEY : "14ad3a4a37c5aade4dea6a43", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+        ]
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    //解决rxjava报错问题
+    packagingOptions{
+        exclude 'META-INF/rxjava.properties'
+    }
+
+    greendao {
+        schemaVersion 1
+        daoPackage 'com.ling.engine.db'
+        targetGenDir 'src/main/java'
     }
 }
 
@@ -34,20 +52,26 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.6'
+
     compile 'com.google.dagger:dagger:2.0.2'
     compile 'com.google.dagger:dagger-compiler:2.0.2'
     compile 'org.glassfish:javax.annotation:10.0-b28'
+
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+
     compile 'org.greenrobot:greendao:3.2.0'
+    compile 'org.greenrobot:greendao-generator:3.2.0'
+
     compile 'com.jakewharton:butterknife:8.4.0'
     apt 'com.jakewharton:butterknife-compiler:8.4.0'
-    compile 'com.facebook.fresco:fresco:0.12.0'
-    compile 'com.facebook.fresco:animated-gif:0.12.0'
-    compile 'com.facebook.fresco:animated-webp:0.12.0'
-    compile 'com.facebook.fresco:webpsupport:0.12.0'
-    // your project's other dependencies
-    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
+
+//    compile 'com.facebook.fresco:fresco:0.12.0'
+//    compile 'com.facebook.fresco:animated-gif:0.12.0'
+//    compile 'com.facebook.fresco:animated-webp:0.12.0'
+//    compile 'com.facebook.fresco:webpsupport:0.12.0'
+//     your project's other dependencies
+//    compile 'com.facebook.fresco:imagepipeline-okhttp3:0.12.0+'
     compile 'cn.jiguang.sdk:jpush:3.0.0'
     compile 'cn.jiguang.sdk:jcore:1.0.0'
 //    listview
